# Klondike

./: CMakeLists.txt  Klondike.cpp  Klondike.h  Logic.h  README.md  View.h  compile.sh  groups  main.cpp  project.config
config/decks/: frenchDeck.txt  spanishDeck.txt
controllers/: AbandonController.h  ActionListController.h  ActionListHeader.h  AutomaticActionListController.h  CMakeLists.txt  ChooseDeckController.cpp  ChooseDeckController.h  ConfigurationController.h  DeckOptionsVisitor.h  ExitController.h  ExitGameController.h  GameActionController.cpp  GameActionController.h  GameActionVisitor.h  GameController.h  GameSaver.h  NewGameController.cpp  NewGameController.h  NewOrLoadController.cpp  NewOrLoadController.h  OperationController.h  OperationControllerVisitor.h  Player.h  PlayerController.h  PlayerControllerVisitor.h  PlayerSeleccionController.h  PlayerType.h  ScoreController.h  State.h  UndoListSaver.h  UndoRedoController.h
controllers/local/: ActionListControllerVisitor.h  ActionListHeaderVisitor.h  AutomaticDeckActionListController.cpp  AutomaticDeckActionListController.h  AutomaticGameActionListController.cpp  AutomaticGameActionListController.h  CMakeLists.txt  ConfigurationController.h  DeckAction.cpp  DeckAction.h  DeckControllerBuilder.cpp  DeckControllerBuilder.h  DeckOption.cpp  DeckOption.h  ExitControllerBuilder.cpp  ExitControllerBuilder.h  ExitGameAction.cpp  ExitGameAction.h  GameActionListHeader.cpp  GameActionListHeader.h  GameActionsControllerBuilder.cpp  GameActionsControllerBuilder.h  GameActionsInitializer.cpp  GameActionsInitializer.h  GameFromFileAction.cpp  GameFromFileAction.h  GiveUpGameAction.cpp  GiveUpGameAction.h  KlondikeCommandGameAction.cpp  KlondikeCommandGameAction.h  LoadGameAction.cpp  LoadGameAction.h  LoadGameControllerBuilder.cpp  LoadGameControllerBuilder.h  LocalActionListController.cpp  LocalActionListController.h  LocalDemoPlayer.cpp  LocalDemoPlayer.h  LocalExitGameController.cpp  LocalExitGameController.h  (+42 more)
libs/pathUtils/: pathUtils.h
localization/: CMakeLists.txt  LanguajeValue.h  Localization.cpp  Localization.h
models/: CMakeLists.txt  Card.cpp  Card.h  CardProperty.cpp  CardProperty.h  DeckBuilder.h  DeckFactory.h  FactoryClassTemplate.h  Foundation.cpp  Foundation.h  FoundationToTableauCommand.cpp  FoundationToTableauCommand.h  FrenchDeckBuilder.cpp  FrenchDeckBuilder.h  FrenchSuit.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameDeck.cpp  GameDeck.h  KlondikeCommand.cpp  KlondikeCommand.h  KlondikeCommandSaver.h  KlondikeCommandShop.cpp  KlondikeCommandShop.h  KlondikeCommandShopBuilder.cpp  KlondikeCommandShopBuilder.h  KlondikeCommandVisitor.h  Pile.cpp  Pile.h  PilesGroup.cpp  PilesGroup.h  SpanishDeckBuilder.cpp  SpanishDeckBuilder.h  SpanishSuit.h  Stock.cpp  Stock.h  StockToWaistCommand.cpp  StockToWaistCommand.h  (+26 more)
utils/: MenuEntry.h  RandomSelector.h
views/: CMakeLists.txt
views/console/: ActionListView.cpp  ActionListView.h  AutomaticActionListView.cpp  AutomaticActionListView.h  CMakeLists.txt  ConsoleView.cpp  ConsoleView.h  DeckSelectionView.cpp  DeckSelectionView.h  ExitGameView.cpp  ExitGameView.h  GameActionView.cpp  GameActionView.h  GiveUpGameView.cpp  GiveUpGameView.h  HeaderActionListView.cpp  HeaderActionListView.h  KlondikeCommandGameActionView.cpp  KlondikeCommandGameActionView.h  LoadAskView.cpp  LoadAskView.h  LoadGameView.cpp  LoadGameView.h  NewGameView.cpp  NewGameView.h  PlayerInteractionView.cpp  PlayerInteractionView.h  PlayerSelectionView.cpp  PlayerSelectionView.h  SaveGameView.cpp  SaveGameView.h  ScoreView.cpp  ScoreView.h  StartGameView.cpp  StartGameView.h
